--- a/index.html
+++ b/index.html
@@ -22,7 +22,11 @@
   <div id="resumen" class="contenedor resumen"></div>
   <button id="borrarTodo" class="borrar-todo">🧹 Borrar Todo</button>
 
+  <canvas id="grafico" width="400" height="200"></canvas>
 
+  <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
   <script src="presupuesto.js"></script>
+  
 </body>
 </html>
