--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
   <div id="resumen" class="contenedor resumen"></div>
   <button id="borrarTodo" class="borrar-todo">🧹 Borrar Todo</button>
 
-  <canvas id="grafico" width="400" height="200"></canvas>
+  <div class="grafico-contenedor">
+    <canvas id="grafico"></canvas>
+  </div>
+  
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11"></script>
