Exportar e Importar Json

--- a/index.html
+++ b/index.html
@@ -18,9 +18,21 @@
     <button type="submit">Agregar</button>
   </form>
 
+  <label for="filtro">Filtrar movimientos:</label>
+<select id="filtro">
+  <option value="todos">Todos</option>
+  <option value="ingreso">Ingresos</option>
+  <option value="egreso">Egresos</option>
+</select>
+
   <div id="movimientos" class="contenedor"></div>
   <div id="resumen" class="contenedor resumen"></div>
   <button id="borrarTodo" class="borrar-todo">🧹 Borrar Todo</button>
+  <button id="exportarJSON" class="borrar-todo">⬇️ Exportar JSON</button>
+  <label for="importarJSON" class="borrar-todo" style="display: inline-block; cursor: pointer;">
+    ⬆️ Importar JSON
+  </label>
+  <input type="file" id="importarJSON" accept=".json" style="display: none;">
 
   <div class="grafico-contenedor">
     <canvas id="grafico"></canvas>
